--- a/index.html
+++ b/index.html
@@ -3,72 +3,197 @@
 
 <head>
   <meta charset="utf-8">
-  <title>shreya personal site
-    <title> shreya personal site</title>
+  <title>Shreya</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet" <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <style media="screen">
+    body {
+      margin: 0;
+      text-align: center;
+      font-family: 'Dancing Script', cursive;
+    }
+
+    h1 {
+      color: #3BACB6;
+      font-size: 90px;
+      margin: 50px auto 0 auto;
+    }
+
+    h2 {
+      color: #3BACB6;
+      text-align: center;
+      font-size: 2.5rem;
+      font-weight: normal;
+    }
+
+    h3 {
+      color: #B3E8E5;
+      font-size: 30px;
+      padding-bottom: 10px;
+    }
+
+    .top-container {
+      background-color: #B3E8E5;
+      padding-top: 100px
+    }
+
+    .middle-container {
+      margin: 100px 0;
+
+    }
+
+    .bottom-container {
+      background-color : #66bfbf;
+      padding: 50px 0px 20px;
+    }
+    a{
+      color: #2F8F9D;
+      margin: 10px;
+      text-decoration: none;
+    }
+a:hover{
+  color: #EAF6F6;
+}
+.copyright{
+  color: #EAF6F6;
+  padding: 20px 0px;
+}
+    .stu {
+      text-decoration: underline;
+    }
+
+    .bottom-cloud {
+      position: absolute;
+      left: 300px;
+      bottom: 200px;
+    }
+
+    .top-cloud {
+      position: absolute;
+      right: 300px;
+      top: 40px
+    }
+
+    .skills {
+      text-align: left;
+      margin: 100px auto 100px auto;
+      width: 50%;
+      line-height: 2.5rem;
+
+    }
+
+    .top-image {
+      float: left;
+      margin-right: 30px;
+      background-color: #ECE5C7;
+
+    }
+
+    .bottom-image {
+      float: left;
+      margin-left: 0px;
+      background-color: #ECE5C7;
+    }
+
+    .intro {
+      width: 20%;
+      margin: auto;
+    }
+.contact-message{
+  width: 30%;
+  margin: 40px auto 60px;
+}
+    p {
+      line-height: 2.5rem;
+    }
+
+    hr {
+      border: dotted #B3E8E5 6px;
+      border-bottom: none;
+      width: 4%;
+      margin: 100px auto;
+    }
+
+    contact-m {
+      width: 20%;
+    }
+    .btn {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: ;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+  </style>
 </head>
 
 <body>
-  <table cellspacing="30">
-    <tr>
-      <td > <img src="images/0c0a69f19d4cd1af099f6db598de6d4b.jpg" alt="Photo" width='150' height='200'></td>
-      <td>
-        <h1>Shreya</h1>
-        <p>
-          <er>I am a student of <strong><a
-                href="https://www.google.com/search?gs_ssp=eJwNxUEOQDAQAMC48gmJONuNUu0T_GLVFkGbdB3098xlyqrbOny8eMkGCtvC2xtYQTGNTo2MaCy8WiOjZkcLTRMPam4S3XSmQ_ZAtXA4YvpzMayUci1uj_H6ALfUHP8&q=ramakrishna+senior+secondary+school&rlz=1C1VDKB_enIN946IN946&oq=ramakri&aqs=chrome.3.69i57j46i433i512j0i512j46i175i199i512j46i199i291i512j46i175i199i512l2j0i10i512j46i175i199i512.10951j0j1&sourceid=chrome&ie=UTF-8">RKS</a></strong>.
-            </er< /p>
-            <p>I❤coffee and reading books.</p>
-      </td>
-    </tr>
-  </table>
-  <hr>
-  <h2>Education</h2>
-  <ul>
-    <li>RKS</li>
-    <li>VVPS</li>
-  </ul>
-  <hr>
-  <h3>Places where I traveled</h3>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Year</th>
-        <th>Places</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2015</td>
-        <td>Agra</td>
-      </tr>
-      <tr>
-        <td>2018</td>
-        <td>Manali</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-  <table cellspacing="10">
-    <tr>
-    <td>
-    <table>
-      <tr>
-        <td>Cooking</td>
-        <td>★★★★</td>
-      </tr>
-      </tr>
-      <td>Playing games</td>
-      <td>★★★★★</td>
-      </tr>
-    </table>
-  </td>
-  </tr>
-  </table>
 
-  <hr>
-  <a href="hobbies.html">My hobbies</a><br>
-  <a href="contact.html">Contact me</a>
-</body>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1>I am Shreya.</h1>
+    <h2> a <span class="stu">stu</span>dent</h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-img">
+
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img src="https://cdn-icons.flaticon.com/png/512/2423/premium/2423830.png?token=exp=1654179875~hmac=195cbfc242d716a2c0efa69f7acc8cbf" alt="" width="100px">
+      <h2>Hello.</h2>
+      <p class="intro">I am a Shreya and I am studing in 11 class.I love coffee and reading book. </p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="top-image" src="https://cdn-icons-png.flaticon.com/512/1830/1830839.png" alt="" width="100px">
+        <h3>Cooking</h3>
+        <p>I like to cook.</p>
+      </div>
+      <div class="skill-row">
+        <img class="bottom-image" src="https://t4.ftcdn.net/jpg/03/19/50/19/240_F_319501967_fIn3mM9hnam5IzmZbCPxDvg9RBnaum3P.jpg" width="150px" alt="">
+        <h3>Badminton</h3>
+        <p>In sports.badminton is my favourite.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>If you also love cooking and playing badminton. </h3>
+      <p class="contact-message">If you also love cooking and playing badminton. You can contact me. We can play together</p>
+      <a class="btn" href="mailto:Shreyavermaco@email.com">CONTACT ME</a>
+    </div>
+  </div>
+
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <p class="copyright">© Shreya verma.</p>
+  </div>
 
 </html>
